--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 <section class = "page p2">
     <header>
       </header>
-      <main>Page content</main>
+      <main><div class="boxmid">
+        <h4 class="firstbit">BUY TICKETS</h4>
+        <h2 class = "secondbit">YOU CAN GO TO SPACE!</h2>
+        <a href="#" class="link-style border">READ MORE</a>
+      </div></main>
     
     <footer> </footer>
   
@@ -44,9 +48,13 @@
   <section class = "page p3">
     <header>
       </header>
-      <main>Page content</main>
+      <main><div class="boxmid">
+        <h4 class="firstbit">SPACE TRAVEL DEALS</h4>
+        <h2 class = "secondbit">YOU MIGHT NOT HAVE TO SELL A KIDNEY!</h2>
+        <a href="#" class="link-style border">READ MORE</a>
+      </div></main>
     
-    <footer>Footer</footer>
+    <footer></footer>
   
   </section>
 </body>
