--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
 
 <head>
   <meta charset="utf-8">
@@ -12,28 +12,29 @@
 </head>
 
 <body>
-<section class = "page p1">
+<section class = "page p1" id="background">
   <header>
     <nav class="container1">
       <div class="box"><h1> SPACEY</h1> </div>
-      <div class="box"><a href = "#"><h3>HOME</h3></div>
-      <div class="box"><a href = "#"><h3>ABOUT</h3></div>
-      <div class="box"><a href = "#"><h3>TICKETS</h3></div>
-      <div class="box"><a href = "#"><h3>ROCKETS</h3></div> 
-      <div class="box"><a href = "#"><h3>PRICING</h3></div></a>
+      <div class="box"><a href = "#top"><h3>HOME</h3></div>
+      <div class="box"><a href = "#top"><h3>ABOUT</h3></div>
+      <div class="box"><a href = "#tickets"><h3>TICKETS</h3></div>
+      <div class="box"><a href = "#tickets"><h3>ROCKETS</h3></div> 
+      <div class="box"><a href = "#deals"><h3>PRICING</h3></div></a>
       </nav>
     </header>
   <main>
       <div class="boxmid">
-        <h4 class="firstbit">RECENT LAUNCH</h4>
+        <h4 class="firstbit" >RECENT LAUNCH</h4>
+        <button class="firstbit button" id="changeBtn">View it here!</button>
+        <button class = "firstbit button" id="changebackBtn">Return to the Galaxy</button>
         <h2 class = "secondbit">SHIPFLIGHT VIDEO</h2>
         <a href="#" class="link-style border">READ MORE</a>
       </div>
 </main>
 <footer></footer>
-
 </section>
-<section class = "page p2">
+<section id="tickets" class = "page p2">
     <header>
       </header>
       <main><div class="boxmid">
@@ -45,7 +46,7 @@
     <footer> </footer>
   
   </section>
-  <section class = "page p3">
+  <section id="deals" class = "page p3"> 
     <header>
       </header>
       <main><div class="boxmid">
